<resources>
    <string name="app_name">School_Programm_AS</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_registration_form">RegistrationFormActivity</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
    <string name="title_activity_create_class">CreateClassActivity</string>
    <string name="title_activity_create_timetable">CreateTimetableActivity</string>
    <string name="title_activity_today_timetable">TodayTimetableActivity</string>
    <string name="title_activity_my_qrcode">MyQRCodeActivity</string>
    <string name="title_activity_parent_main">ParentMainActivity</string>
    <string name="title_activity_students_list">StudentsListActivity</string>
    <string name="title_activity_parent_qrscan">ParentQRScanActivity</string>
    <string name="change_bill_plus">Зачислить</string>
    <string name="change_bill_minus">Отнять</string>
    <string name="sample_bill_change">0</string>
    <string name="present">Присутствовал</string>>
    <string name="not_present">Отсутствовал</string>
    <string name="latecomer">Опаздал</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
