<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/Present"
        android:background="@drawable/rectangle_7"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/present" />

    <Button
        android:id="@+id/NotPresent"
        android:background="@drawable/rectangle_7"
        android:layout_width="match_parent"
        android:textColor="@color/colorWhite"
        android:layout_height="40dp"
        android:text="@string/not_present" />
    <Button
        android:id="@+id/Latecomer"
        android:background="@drawable/rectangle_7"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/latecomer" />
</LinearLayout>